# autoreport

./: README.md  pyproject.toml
dados/: cabeçalho.tex
relatorio/: cria.py
relatorio/templates/: cabeçalho.tex
tests/relatorio/: test_cria.py
