[tool.poetry]
name = "autoreport"
version = "0.1.0"
description = "gerador de relatórios em LaTeX"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
